force-app/main/default/objects/SiteUserLog__c/SiteUserLog__c.object-meta.xml
<CustomObject>
    <label>SiteUserLog</label>
    <nameField>
        <label>SiteUserLog</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteUserLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>