force-app/main/default/objects/SiteUserLog__c/fields/Bean_Blog_Post__c.field-meta.xml
<CustomField>
    <fullName>Bean_Blog_Post__c</fullName>
    <label>Bean Blog Post</label>
    <length>255</length>
    <type>Text</type>
</CustomField>