force-app/main/default/objects/SiteUserLog__c/fields/Explore_Plot_Cell__c.field-meta.xml
<CustomField>
    <fullName>Explore_Plot_Cell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explore Plot Cell</label>
    <referenceTo>Explore_Plot_Cell__c</referenceTo>
    <relationshipLabel>SiteUserLogs</relationshipLabel>
    <relationshipName>SiteUserLogs</relationshipName>
    <type>Lookup</type>
</CustomField>