force-app/main/default/objects/SiteUserLog__c/fields/Image_name__c.field-meta.xml
<CustomField>
    <fullName>Image_name__c</fullName>
    <label>Image name</label>
    <length>140</length>
    <type>Text</type>
</CustomField>