force-app/main/default/objects/SiteUserLog__c/fields/Log_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Time__c</fullName>
    <formula>IF(source__c=&apos;APP&apos;,CreatedDate,Logged_Date__c)</formula>
    <inlineHelpText>IF(Source__c=&apos;APP&apos;,CreatedDate,Logged_Date__c)</inlineHelpText>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>