force-app/main/default/objects/SiteUserLog__c/fields/ModuleId__c.field-meta.xml
<CustomField>
    <fullName>ModuleId__c</fullName>
    <label>ModuleId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>