force-app/main/default/objects/SiteUserLog__c/fields/payload__c.field-meta.xml
<CustomField>
    <fullName>payload__c</fullName>
    <label>payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>