force-app/main/default/objects/SiteUserLog__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <formula>IF(Type__c=&apos;SCAN-QR-VARIETY&apos;,&apos;PLOT&apos;,&apos;HOME&apos;)</formula>
    <label>Place</label>
    <type>Text</type>
</CustomField>