force-app/main/default/objects/SiteUserLog__c/fields/Plot_Location__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location__c</fullName>
    <formula>Explore_Plot_Cell__r.Explore_Plot__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot Location</label>
    <type>Text</type>
</CustomField>