force-app/main/default/objects/SiteUserLog__c/fields/Plot_Location_object__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location_object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Location</label>
    <referenceTo>Plot_Location__c</referenceTo>
    <relationshipLabel>SiteUserLogs</relationshipLabel>
    <relationshipName>SiteUserLogs</relationshipName>
    <type>Lookup</type>
</CustomField>