force-app/main/default/objects/SiteUserLog__c/fields/QR__c.field-meta.xml
<CustomField>
    <fullName>QR__c</fullName>
    <label>QR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>