force-app/main/default/objects/SiteUserLog__c/fields/SiteUserSavedSearch_ID__c.field-meta.xml
<CustomField>
    <fullName>SiteUserSavedSearch_ID__c</fullName>
    <label>SiteUserSavedSearch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>