force-app/main/default/objects/SiteUserLog__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <length>240</length>
    <type>Text</type>
</CustomField>