force-app/main/default/objects/SiteUserLog__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <formula>Explore_Plot_Cell__r.Variety__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety Name</label>
    <type>Text</type>
</CustomField>