force-app/main/default/objects/SiteUserLog__c/fields/Variety_obj__c.field-meta.xml
<CustomField>
    <fullName>Variety_obj__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>SiteUserLogs</relationshipLabel>
    <relationshipName>SiteUserLogs</relationshipName>
    <type>Lookup</type>
</CustomField>