force-app/main/default/objects/SiteUserLog__c/fields/VarietyID__c.field-meta.xml
<CustomField>
    <fullName>VarietyID__c</fullName>
    <label>VarietyID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>