force-app/main/default/objects/SiteUserLog__c/listViews/GDM_Access_Logs.listView-meta.xml
<ListView>
    <fullName>GDM_Access_Logs</fullName>
    <columns>NAME</columns>
    <columns>SiteUser__c</columns>
    <columns>Logged_Date__c</columns>
    <columns>payload__c</columns>
    <columns>source__c</columns>
    <columns>ModuleId__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SiteUser__c</field>
        <operation>notContain</operation>
        <value>,ignacio bartolome,fran morea,david crislip,derek cornelius,jenny warning,rodrigo iglesias,lance burditt,charlie simmons,gene moore,adam spelhaug,dieter goldenstein</value>
    </filters>
    <filters>
        <field>ModuleId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>GDM Access Logs</label>
</ListView>